--- a/src/assets/styles/components/Card.scss
+++ b/src/assets/styles/components/Card.scss
@@ -1,14 +1,18 @@
 .card {
-  width: 340px;
-  height: 340px;
-  margin: 10px auto;
-  background-color: $primary;
+  height: 100%;
+  position: relative;
   color: $secondary;
-  border: {
-    radius: 10px;
-  }
-  border: 1px solid black;
-  img{
+  img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: {
+      radius: 10px;
+    }
+  }
+  .card_title {
+    position: absolute;
+    background-color: transparent;
+    bottom: 0;
   }
 }
